feat: enhance role-based access control with internationalized error handling
- Updated `RolesGuard` to throw `ForbiddenException` with localized messages when user roles are missing or insufficient.
- Integrated `I18nService` for improved error messaging in role validation.
- Added new error messages for forbidden access in multiple languages within the i18n error files.
- Updated `AuthController` to utilize the enhanced `RolesGuard` for better access control.

--- a/src/i18n/en/errors.json
+++ b/src/i18n/en/errors.json
@@ -12,6 +12,11 @@
     "TOKEN_EXPIRED": "Token has expired",
     "INVALID_PASSWORD": "Invalid password"
   },
+  "FORBIDDEN": {
+    "ACCESS": "You are not allowed to access this resource",
+    "ROLES": "You are not allowed to access this resource",
+    "PERMISSIONS": "You are not allowed to access this resource"
+  },
   "USER": {
     "NOT_FOUND": "User not found"
   }
