--- a/src/i18n/ru/errors.json
+++ b/src/i18n/ru/errors.json
@@ -12,6 +12,11 @@
     "TOKEN_EXPIRED": "Срок действия токена истек",
     "INVALID_PASSWORD": "Неверный пароль"
   },
+  "FORBIDDEN": {
+    "ACCESS": "У вас нет доступа к этому ресурсу",
+    "ROLES": "У вас нет доступа к этому ресурсу",
+    "PERMISSIONS": "У вас нет доступа к этому ресурсу"
+  },
   "USER": {
     "NOT_FOUND": "Пользователь не найден"
   }
