feat: implement permissions management and enhance role-based access control
- Added `Permission` model and related tables for managing user permissions.
- Updated `User` and `Role` models to include permissions associations.
- Enhanced seeding script to create default permissions and assign them to roles.
- Introduced `PermissionsGuard` and `RequirePermissions` decorator for access control based on user permissions.
- Updated authentication and user retrieval logic to include permissions in responses.
- Enhanced error handling for forbidden access related to permissions in multiple languages.

--- a/src/i18n/en/errors.json
+++ b/src/i18n/en/errors.json
@@ -12,12 +12,11 @@
     "TOKEN_EXPIRED": "Token has expired",
     "INVALID_PASSWORD": "Invalid password"
   },
-  "FORBIDDEN": {
-    "ACCESS": "You are not allowed to access this resource",
-    "ROLES": "You are not allowed to access this resource",
-    "PERMISSIONS": "You are not allowed to access this resource"
-  },
   "USER": {
     "NOT_FOUND": "User not found"
+  },
+  "FORBIDDEN": {
+    "ROLES": "You don't have the required role to perform this action",
+    "PERMISSIONS": "You don't have the required permissions to perform this action"
   }
 }
