--- a/src/i18n/ru/success.json
+++ b/src/i18n/ru/success.json
@@ -8,5 +8,13 @@
     "CREATE": "{entity} успешно создан",
     "UPDATE": "{entity} успешно обновлен",
     "DELETE": "{entity} успешно удален"
+  },
+  "LANGUAGE": {
+    "REMOVED": "Язык успешно удален",
+    "CREATED": "Язык успешно создан",
+    "UPDATED": "Язык успешно обновлен"
+  },
+  "UPLOAD": {
+    "UPLOADED": "Файл успешно загружен"
   }
-} 
+}
