feat: integrate AutoColor with AutoModel for enhanced color management
- Introduced a new AutoColor entity relationship with AutoModel, allowing colors to be associated with specific models.
- Updated DTOs to include autoModelId, enhancing validation and API documentation.
- Enhanced AutoColorService with new methods for retrieving colors by model and checking color existence within a model context.
- Added new API endpoints for fetching colors by model and checking color existence for specific models.
- Implemented internationalization support for success and error messages related to auto colors.
- Created a migration script to update existing auto colors with default model associations.
- Updated database schema to reflect the new relationships and constraints.

--- a/src/i18n/en/errors.json
+++ b/src/i18n/en/errors.json
@@ -105,6 +105,10 @@
   "FEEDBACK": {
     "NOT_FOUND": "Feedback not found"
   },
+  "AUTO_COLOR": {
+    "NOT_FOUND": "Auto color not found",
+    "NAME_ALREADY_EXISTS": "Auto color name already exists for this model"
+  },
   "NOT_FOUND": "Resource not found",
   "PARENT_GENRE_NOT_FOUND": "Parent genre not found",
   "CANNOT_SET_SELF_AS_PARENT": "Cannot set as own parent",
