--- a/src/i18n/ru/errors.json
+++ b/src/i18n/ru/errors.json
@@ -105,6 +105,10 @@
   "FEEDBACK": {
     "NOT_FOUND": "Обратная связь не найдена"
   },
+  "AUTO_COLOR": {
+    "NOT_FOUND": "Цвет автомобиля не найден",
+    "NAME_ALREADY_EXISTS": "Название цвета автомобиля уже существует для этой модели"
+  },
   "NOT_FOUND": "Ресурс не найден",
   "PARENT_GENRE_NOT_FOUND": "Родительский жанр не найден",
   "CANNOT_SET_SELF_AS_PARENT": "Нельзя установить как собственный родительский",
