--- a/src/i18n/ru/success.json
+++ b/src/i18n/ru/success.json
@@ -89,5 +89,10 @@
     "CREATED": "Разрешение успешно создано",
     "UPDATED": "Разрешение успешно обновлено",
     "DELETED": "Разрешение успешно удалено"
+  },
+  "AUTO_COLOR": {
+    "CREATED": "Цвет автомобиля успешно создан",
+    "UPDATED": "Цвет автомобиля успешно обновлен",
+    "DELETED": "Цвет автомобиля успешно удален"
   }
 }
